--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <h6>header 6</h6>
     <img src="graphics/blackpanther.png" alt="Black Panther">
     <p><a href="https://www.nytimes.com/">New York</a></p>
+    <p><a href="page2.html">Go to Page 2</a></p>
 </body>
 </html>
