--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE HTML>
+
 <html>
+
 <head>
     <title>October 22, 2024</title>
+    
+<link rel="stylesheet" type=""text/css" href="default.css"
 </head>
-<body style="background-color: lightblue">
+
+
+
+<body>
     <p>This is our index page.<br>The election is getting close.</p>
     <p><i>Posters</i> are <b>everywhere</b>.</p>
+
+    <hr>
+
     <ul>
         <li>Steelers</li>
         <li>Tarheels</li>
@@ -18,8 +28,10 @@
     </ol>
     <h1>header 1</h1>
     <h6>header 6</h6>
+<div id = "bpImage">
     <img src="graphics/blackpanther.png" alt="Black Panther">
+</div>
     <p><a href="https://www.nytimes.com/">New York</a></p>
-    <p><a href="page2.html">Go to Page 2</a></p>
+    <p><a href="page2.html">Page 2</a></p>
 </body>
 </html>
