--- a/page2.html
+++ b/page2.html
@@ -1,18 +1,14 @@
 <!DOCTYPE HTML>
-
 <html>
-
 <head>
     <title>Page 2</title>
-    
-<link rel="stylesheet" type=""text/css" href="default.css"
+    <link rel="stylesheet" type="text/css" href="liberty.css">
 </head>
 <body>
-<h1><strong>Liberty Finally Give New York City a Basketball Championship</strong></h1>
+    <h1><strong>Liberty Finally Give New York City a Basketball Championship</strong></h1>
     <p>New York got its first basketball championship in 48 years, as the New York Liberty beat the Minnesota Lynx in front of exuberant fans in Brooklyn.</p>
     <img src="graphics/championship.png" alt="Championship">
     <p>As the final second ticked off the clock, Breanna Stewart turned to her teammate Jonquel Jones for a long-awaited championship hug, as streamers floated down on the court and thousands of fans screamed, danced and recorded the moment on their phones.</p>
-</div>
     <p><a href="index.html">Homepage</a></p>
 </body>
 </html>
