--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>October 22, 2024</title>
+    <title>Joseph Micael's COMM 150 Homepage</title>
     
 <link rel="stylesheet" type=""text/css" href="default.css"
 </head>
@@ -11,28 +11,15 @@
 
 
 <body>
-    <p>This is our index page.<br>The election is getting close.</p>
-    <p><i>Posters</i> are <b>everywhere</b>.</p>
+    <h1>Hi, my name is Joseph Micael</h1>
+    <p>I am a senior at UNC Chapel Hill majoring in Information Science.</p>
+    <p>This is our index page.</p>
 
-    <hr>
 
-    <ul>
-        <li>Steelers</li>
-        <li>Tarheels</li>
-        <li>Penguins</li>
-    </ul>
-    <ol>
-        <li>Steelers</li>
-        <li>Tarheels</li>
-        <li>Penguins</li>
-    </ol>
-    <h1>header 1</h1>
-    <h6>header 6</h6>
-<div id = "bpImage">
-    <img src="graphics/blackpanther.png" alt="Black Panther">
-</div>
-    <p><a href="https://www.nytimes.com/">New York</a></p>
     <p><a href="page2.html">Page 2</a></p>
     <p><a href="carolinabball.html">UNC Chapel Hill Men's Basketball</a></p>
+    <p><a href="Joseph_Micael_Assignnent_8B.html">The Gateway of Senses (Twine_Project)</a></p>
+
+</div>
 </body>
 </html>
